# Wally

./: .gitignore  DEPLOYMENT.md  README-enhanced.md  README.md  Readme.md  implementation_plan.md
backend/: .env.example  README.md  database.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  setup_db.bat  setup_db.sh  start.bat  start.sh
backend/agents/: Recipe_agent.py  budget_optimizer.py  cart_builder.py  category_assigner.py  inputInterpreterAgent.py  input_interpreter.py  itemExtractorAgent.py  item_extractor.py  personalization.py  product_fetcher.py  sharedState.py  states.py  user_manager.py  workflow.py
backend/mcp/: mcp_tools.py  server.py
backend/orchestrator/: Orchestrator.py  agentState.py
extension/: README-enhanced.md  README.md  build.bat  build.sh  manifest.json  package-lock.json  package.json  popup.html  vite.config.ts
extension/src/: App.vue
extension/src/components/: Chatbot.vue
