[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.2",
    "flask>=3.1.1",
    "graphviz>=0.21",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-tavily>=0.2.5",
    "langgraph>=0.5.0",
    "langgraph-supervisor>=0.0.27",
]
